--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,11 @@
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 AdvancedPS = "576499cb-2369-40b2-a588-c64705576edc"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DocOpt = "968ba79b-81e4-546f-ab3a-2eecfa62a9db"
 DynamicPPL = "366bfd00-2699-11ea-058f-f148b4cae6d8"
 MCTS = "e12ccd36-dcad-5f33-8774-9175229e7b33"
 POMDPLinter = "f3bd98c0-eb40-45e2-9eb1-f2763262d755"
