--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ParticleFilters = "c8b314e2-9260-5cf8-ae76-3be7461ca6d0"
 Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Stan = "682df890-35be-576f-97d0-3d8c8b33a550"
 StanSample = "c1514b29-d3a0-5178-b312-660c88baa699"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
