--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ParticleFilters = "c8b314e2-9260-5cf8-ae76-3be7461ca6d0"
 Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
 Stan = "682df890-35be-576f-97d0-3d8c8b33a550"
