--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocOpt = "968ba79b-81e4-546f-ab3a-2eecfa62a9db"
 DynamicPPL = "366bfd00-2699-11ea-058f-f148b4cae6d8"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 MCTS = "e12ccd36-dcad-5f33-8774-9175229e7b33"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
